@@ -17,17 +17,17 @@
 
 package bisq.chat;
 
-import bisq.chat.bisqeasy.offerbook.BisqEasyOfferbookChannel;
-import bisq.chat.bisqeasy.offerbook.BisqEasyOfferbookChannelService;
-import bisq.chat.bisqeasy.offerbook.BisqEasyOfferbookSelectionService;
-import bisq.chat.bisqeasy.open_trades.BisqEasyOpenTradeChannel;
-import bisq.chat.bisqeasy.open_trades.BisqEasyOpenTradeChannelService;
-import bisq.chat.bisqeasy.open_trades.BisqEasyOpenTradeSelectionService;
-import bisq.chat.bisqeasy.private_chats.BisqEasyPrivateChatChannelSelectionService;
+import bisq.chat.bisq_easy.offerbook.BisqEasyOfferbookChannel;
+import bisq.chat.bisq_easy.offerbook.BisqEasyOfferbookChannelService;
+import bisq.chat.bisq_easy.offerbook.BisqEasyOfferbookSelectionService;
+import bisq.chat.bisq_easy.open_trades.BisqEasyOpenTradeChannel;
+import bisq.chat.bisq_easy.open_trades.BisqEasyOpenTradeChannelService;
+import bisq.chat.bisq_easy.open_trades.BisqEasyOpenTradeSelectionService;
 import bisq.chat.common.CommonChannelSelectionService;
 import bisq.chat.common.CommonPublicChatChannel;
 import bisq.chat.common.CommonPublicChatChannelService;
 import bisq.chat.notifications.ChatNotificationService;
+import bisq.chat.priv.LeavePrivateChatManager;
 import bisq.chat.priv.PrivateChatChannelService;
 import bisq.chat.two_party.TwoPartyPrivateChatChannel;
 import bisq.chat.two_party.TwoPartyPrivateChatChannelService;
@@ -35,13 +35,12 @@ import bisq.common.application.Service;
 import bisq.common.util.CompletableFutureUtils;
 import bisq.network.NetworkService;
 import bisq.persistence.PersistenceService;
-import bisq.presentation.notifications.SendNotificationService;
+import bisq.presentation.notifications.SystemNotificationService;
 import bisq.settings.SettingsService;
 import bisq.user.UserService;
 import bisq.user.identity.UserIdentity;
 import bisq.user.identity.UserIdentityService;
 import bisq.user.profile.UserProfile;
-import bisq.user.profile.UserProfileService;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 
@@ -51,85 +50,82 @@ import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static bisq.chat.common.SubDomain.*;
+
 @Slf4j
-@Getter
 public class ChatService implements Service {
     private final PersistenceService persistenceService;
     private final NetworkService networkService;
     private final UserService userService;
     private final UserIdentityService userIdentityService;
-    private final UserProfileService userProfileService;
+
+    @Getter
     private final ChatNotificationService chatNotificationService;
+    @Getter
     private final BisqEasyOfferbookChannelService bisqEasyOfferbookChannelService;
+    @Getter
     private final BisqEasyOpenTradeChannelService bisqEasyOpenTradeChannelService;
+    @Getter
     private final Map<ChatChannelDomain, CommonPublicChatChannelService> commonPublicChatChannelServices = new HashMap<>();
-    private final Map<ChatChannelDomain, TwoPartyPrivateChatChannelService> twoPartyPrivateChatChannelServices = new HashMap<>();
+    @Getter
     private final Map<ChatChannelDomain, ChatChannelSelectionService> chatChannelSelectionServices = new HashMap<>();
+    @Getter
+    private final LeavePrivateChatManager leavePrivateChatManager;
+
+    private final Map<ChatChannelDomain, TwoPartyPrivateChatChannelService> twoPartyPrivateChatChannelServices = new HashMap<>();
 
     public ChatService(PersistenceService persistenceService,
                        NetworkService networkService,
                        UserService userService,
                        SettingsService settingsService,
-                       SendNotificationService sendNotificationService) {
+                       SystemNotificationService systemNotificationService) {
         this.persistenceService = persistenceService;
         this.networkService = networkService;
         this.userService = userService;
         this.userIdentityService = userService.getUserIdentityService();
-        this.userProfileService = userService.getUserProfileService();
 
         chatNotificationService = new ChatNotificationService(persistenceService,
+                networkService,
                 this,
-                sendNotificationService,
+                systemNotificationService,
                 settingsService,
                 userIdentityService,
-                userProfileService);
+                userService.getUserProfileService());
 
         // BISQ_EASY
         bisqEasyOfferbookChannelService = new BisqEasyOfferbookChannelService(persistenceService,
                 networkService,
                 userService);
+        chatChannelSelectionServices.put(ChatChannelDomain.BISQ_EASY_OFFERBOOK,
+                new BisqEasyOfferbookSelectionService(persistenceService, bisqEasyOfferbookChannelService));
+
         bisqEasyOpenTradeChannelService = new BisqEasyOpenTradeChannelService(persistenceService,
                 networkService,
                 userService);
-
-        addToTwoPartyPrivateChatChannelServices(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT);
-
-        chatChannelSelectionServices.put(ChatChannelDomain.BISQ_EASY_OFFERBOOK,
-                new BisqEasyOfferbookSelectionService(persistenceService, bisqEasyOfferbookChannelService));
         chatChannelSelectionServices.put(ChatChannelDomain.BISQ_EASY_OPEN_TRADES,
                 new BisqEasyOpenTradeSelectionService(persistenceService, bisqEasyOpenTradeChannelService,
                         userIdentityService));
-        chatChannelSelectionServices.put(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT,
-                new BisqEasyPrivateChatChannelSelectionService(persistenceService,
-                        twoPartyPrivateChatChannelServices.get(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT),
-                        userIdentityService));
-
 
         // DISCUSSION
         addToCommonPublicChatChannelServices(ChatChannelDomain.DISCUSSION,
-                List.of(new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, "bisq"),
-                        new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, "bitcoin"),
-                        new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, "markets"),
-                        new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, "offTopic")));
-        addToTwoPartyPrivateChatChannelServices(ChatChannelDomain.DISCUSSION);
-        addToChatChannelSelectionServices(ChatChannelDomain.DISCUSSION);
+                List.of(new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, DISCUSSION_BISQ)));
 
-        // EVENTS
-        addToCommonPublicChatChannelServices(ChatChannelDomain.EVENTS,
-                List.of(new CommonPublicChatChannel(ChatChannelDomain.EVENTS, "conferences"),
-                        new CommonPublicChatChannel(ChatChannelDomain.EVENTS, "meetups"),
-                        new CommonPublicChatChannel(ChatChannelDomain.EVENTS, "podcasts"),
-                        new CommonPublicChatChannel(ChatChannelDomain.EVENTS, "tradeEvents")));
-        addToTwoPartyPrivateChatChannelServices(ChatChannelDomain.EVENTS);
-        addToChatChannelSelectionServices(ChatChannelDomain.EVENTS);
+        twoPartyPrivateChatChannelServices.put(ChatChannelDomain.DISCUSSION,
+                new TwoPartyPrivateChatChannelService(persistenceService,
+                        networkService,
+                        userService,
+                        ChatChannelDomain.DISCUSSION));
+        addToChatChannelSelectionServices(ChatChannelDomain.DISCUSSION);
 
         // SUPPORT
         addToCommonPublicChatChannelServices(ChatChannelDomain.SUPPORT,
-                List.of(new CommonPublicChatChannel(ChatChannelDomain.SUPPORT, "support"),
-                        new CommonPublicChatChannel(ChatChannelDomain.SUPPORT, "questions"),
-                        new CommonPublicChatChannel(ChatChannelDomain.SUPPORT, "reports")));
-        addToTwoPartyPrivateChatChannelServices(ChatChannelDomain.SUPPORT);
+                List.of(new CommonPublicChatChannel(ChatChannelDomain.SUPPORT, SUPPORT_SUPPORT)));
         addToChatChannelSelectionServices(ChatChannelDomain.SUPPORT);
+
+        leavePrivateChatManager = new LeavePrivateChatManager(bisqEasyOpenTradeChannelService,
+                twoPartyPrivateChatChannelServices,
+                chatChannelSelectionServices,
+                chatNotificationService);
     }
 
     @Override
@@ -141,7 +137,7 @@ public class ChatService implements Service {
         list.addAll(commonPublicChatChannelServices.values().stream()
                 .map(CommonPublicChatChannelService::initialize)
                 .collect(Collectors.toList()));
-        list.addAll(twoPartyPrivateChatChannelServices.values().stream()
+        list.addAll(getTwoPartyPrivateChatChannelServices()
                 .map(PrivateChatChannelService::initialize)
                 .collect(Collectors.toList()));
         list.addAll(chatChannelSelectionServices.values().stream()
@@ -155,17 +151,18 @@ public class ChatService implements Service {
 
     @Override
     public CompletableFuture<Boolean> shutdown() {
+        log.info("shutdown");
         List<CompletableFuture<Boolean>> list = new ArrayList<>(List.of(bisqEasyOfferbookChannelService.shutdown(),
                 bisqEasyOpenTradeChannelService.shutdown()));
         list.addAll(commonPublicChatChannelServices.values().stream()
                 .map(CommonPublicChatChannelService::shutdown)
-                .collect(Collectors.toList()));
-        list.addAll(twoPartyPrivateChatChannelServices.values().stream()
+                .toList());
+        list.addAll(getTwoPartyPrivateChatChannelServices()
                 .map(PrivateChatChannelService::shutdown)
-                .collect(Collectors.toList()));
+                .toList());
         list.addAll(chatChannelSelectionServices.values().stream()
                 .map(ChatChannelSelectionService::shutdown)
-                .collect(Collectors.toList()));
+                .toList());
 
         list.add(chatNotificationService.shutdown());
 
@@ -189,22 +186,18 @@ public class ChatService implements Service {
         }
     }
 
-    public Optional<TwoPartyPrivateChatChannel> createAndSelectTwoPartyPrivateChatChannel(ChatChannelDomain chatChannelDomain, UserProfile peer) {
-        if (chatChannelDomain == ChatChannelDomain.BISQ_EASY_OFFERBOOK ||
-                chatChannelDomain == ChatChannelDomain.BISQ_EASY_OPEN_TRADES) {
-            Optional<TwoPartyPrivateChatChannel> optionalChannel = twoPartyPrivateChatChannelServices.get(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT).findOrCreateChannel(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT, peer);
-            optionalChannel.ifPresent(channel -> getChatChannelSelectionService(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT).selectChannel(channel));
-            return optionalChannel;
-        } else {
-            Optional<TwoPartyPrivateChatChannel> optionalChannel = twoPartyPrivateChatChannelServices.get(chatChannelDomain).findOrCreateChannel(chatChannelDomain, peer);
-            optionalChannel.ifPresent(channel -> getChatChannelSelectionService(chatChannelDomain).selectChannel(channel));
-            return optionalChannel;
-        }
+    public Optional<TwoPartyPrivateChatChannel> createAndSelectTwoPartyPrivateChatChannel(ChatChannelDomain chatChannelDomain,
+                                                                                          UserProfile peer) {
+        return findTwoPartyPrivateChatChannelService(chatChannelDomain).stream()
+                .flatMap(twoPartyPrivateChatChannelService ->
+                        twoPartyPrivateChatChannelService.findOrCreateChannel(chatChannelDomain, peer).stream()
+                                .peek(channel -> getChatChannelSelectionService(chatChannelDomain).selectChannel(channel)))
+                .findAny();
     }
 
     public boolean isIdentityUsed(UserIdentity userIdentity) {
         boolean usedInAnyPrivateChannel = Stream.concat(bisqEasyOpenTradeChannelService.getChannels().stream(),
-                        twoPartyPrivateChatChannelServices.values().stream()
+                        getTwoPartyPrivateChatChannelServices()
                                 .flatMap(c -> c.getChannels().stream()))
                 .anyMatch(c -> c.getMyUserIdentity().equals(userIdentity));
 
@@ -219,6 +212,14 @@ public class ChatService implements Service {
     }
 
     public ChatChannelSelectionService getChatChannelSelectionService(ChatChannelDomain chatChannelDomain) {
+        switch (chatChannelDomain) {
+            case BISQ_EASY_OFFERBOOK -> {
+                return getBisqEasyOfferbookChannelSelectionService();
+            }
+            case BISQ_EASY_OPEN_TRADES -> {
+                return getBisqEasyOpenTradesSelectionService();
+            }
+        }
         return chatChannelSelectionServices.get(chatChannelDomain);
     }
 
@@ -230,19 +231,8 @@ public class ChatService implements Service {
         return (BisqEasyOpenTradeSelectionService) getChatChannelSelectionServices().get(ChatChannelDomain.BISQ_EASY_OPEN_TRADES);
     }
 
-    public BisqEasyPrivateChatChannelSelectionService getBisqEasyPrivateChatChannelSelectionService() {
-        return (BisqEasyPrivateChatChannelSelectionService) getChatChannelSelectionServices().get(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT);
-    }
-
-    private void addToTwoPartyPrivateChatChannelServices(ChatChannelDomain chatChannelDomain) {
-        twoPartyPrivateChatChannelServices.put(chatChannelDomain,
-                new TwoPartyPrivateChatChannelService(persistenceService,
-                        networkService,
-                        userService,
-                        chatChannelDomain));
-    }
-
-    private void addToCommonPublicChatChannelServices(ChatChannelDomain chatChannelDomain, List<CommonPublicChatChannel> channels) {
+    private void addToCommonPublicChatChannelServices(ChatChannelDomain chatChannelDomain,
+                                                      List<CommonPublicChatChannel> channels) {
         commonPublicChatChannelServices.put(chatChannelDomain,
                 new CommonPublicChatChannelService(persistenceService,
                         networkService,
@@ -252,11 +242,24 @@ public class ChatService implements Service {
     }
 
     private void addToChatChannelSelectionServices(ChatChannelDomain chatChannelDomain) {
+        Optional<TwoPartyPrivateChatChannelService> privateChatChannelService = findTwoPartyPrivateChatChannelService(chatChannelDomain);
         chatChannelSelectionServices.put(chatChannelDomain,
                 new CommonChannelSelectionService(persistenceService,
-                        twoPartyPrivateChatChannelServices.get(chatChannelDomain),
+                        privateChatChannelService,
                         commonPublicChatChannelServices.get(chatChannelDomain),
                         chatChannelDomain,
                         userIdentityService));
+    }
+
+    public Optional<TwoPartyPrivateChatChannelService> findTwoPartyPrivateChatChannelService(ChatChannelDomain chatChannelDomain) {
+        return Optional.ofNullable(twoPartyPrivateChatChannelServices.get(chatChannelDomain));
+    }
+
+    public TwoPartyPrivateChatChannelService getTwoPartyPrivateChatChannelService() {
+        return findTwoPartyPrivateChatChannelService(ChatChannelDomain.DISCUSSION).orElseThrow();
+    }
+
+    public Stream<TwoPartyPrivateChatChannelService> getTwoPartyPrivateChatChannelServices() {
+        return twoPartyPrivateChatChannelServices.values().stream();
     }
 }
